k8s/11-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: school
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - redis
                        - rabbitmq
                topologyKey: kubernetes.io/hostname
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: school
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
