k8s/20-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: school
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: backend
              topologyKey: kubernetes.io/hostname
      containers:
        - name: backend
          image: 815459455266.dkr.ecr.ap-northeast-2.amazonaws.com/school-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /swagger-ui/index.html
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /swagger-ui/index.html
              port: 8080
            initialDelaySeconds: 80
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: school
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
